--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -1,4 +1,5 @@
-#Wed Mar 15 10:22:32 CET 2017
+#Thu Mar 16 00:02:10 CET 2017
+excludePatterns=**/.idea/**,*.iml,*.md,archetype.properties,**/camunda-license.txt,maven-user-settings.xml
 package=it.pkg
 version=0.1-SNAPSHOT
 groupId=archetype.it
